scode/Gmamcoders/prob16/error.txt
  File "/var/www/html/scode/Gmamcoders/prob16/main.py", line 3
    s = [(start, 0)]  
                      ^
IndentationError: unindent does not match any outer indentation level
